[package]
name = "rust-enum-derive"
version = "0.3.2"
authors = ["Tabor Kelly <taborkelly+github@gmail.com>"]
license = "Apache-2.0/BSD-3-Clause-Clear/MIT"
description = "A simple program for generating rust enums and associated traits from text files."
homepage = "https://github.com/TaborKelly/rust-enum-derive"

[dependencies]
getopts = "0.2"
log = "0.3.0"
env_logger = "0.3.0"
regex = "0.1.0"
toml = "0.1"
